--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ deploy:
   region: "ap-northeast-2"
   app: "docker-react-app"
   env: "Dockerreactapp-env"
-  bucket_name: "elasticbeanstalk:ap-northeast-2:760618558964"
+  bucket_name: "elasticbeanstalk-ap-northeast-2-760618558964"
   bucket_path: "docker-react-app"
   on:
     branch: master
