--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,10 @@ deploy:
   edge: true
   provider: elasticbeanstalk
   region: ap-northeast-2
-  app: docker-react-app
-  env: Dockerreactapp-env
+  app: docker-React-app
+  env: Dockerreactapp-env-1
   bucket_name: elasticbeanstalk-ap-northeast-2-760618558964
-  bucket_path: docker-react-app
+  bucket_path: docker-React-app
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
